--- a/player.html
+++ b/player.html
@@ -220,7 +220,8 @@ $(document).ready(function() {$(&#39;img#closed&#39;).click(function(){$(&#39;#b
 </script>
 <div id='fixedban' style='width:100%;margin:auto;text-align:center;float:none;overflow:hidden;display:scroll;position:fixed;bottom:0;z-index:999;-webkit-transform:translateZ(0);'>
 <div>
-<a id='close-fixedban' onclick='document.getElementById(&quot;fixedban&quot;).style.display = &quot;none&quot;;' style='cursor:pointer;'><img alt='close' src=' https://www.rakeshtechsolutions.com/assets/img/btn_close.gif ' style='vertical-align:middle;' title='close button'/></a></div>
+<a id='close-fixedban' onclick='document.getElementById(&quot;fixedban&quot;).style.display = &quot;none&quot;;' style='cursor:pointer;'>
+ <img alt='close' src=' https://cdn.jsdelivr.net/gh/yosintv/yosintv/football/close.gif' style='vertical-align:middle;' title='close button'/></a></div>
 <div style='text-align:center;display:block;max-width:300px;height:auto;overflow:hidden;margin:auto'>
 <ins class='adsbygoogle' data-ad-client='ca-pub-5525538810839147' data-ad-slot='5912194004' style='display:inline-block;width:300px;height:250px'/>
 <script>
