--- a/player.html
+++ b/player.html
@@ -67,7 +67,7 @@ Scroll Down to Watch Live Match👇👇  </a></b></p>
     </script>
 
         
-    <script src="https://yosintv.github.io/yosintv/jwplayer.js"></script>
+    <script src="https://yosintv.github.io/yosintv/football/jwplayerr.js"></script>
     <body onload="init()">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <script>$(document).ready(function() {
