--- a/player.html
+++ b/player.html
@@ -228,7 +228,7 @@
 </div>
 
 
- <div style="text-align: right;"><iframe allowfullscreen="allowfullscreen" allowtransparency="true" frameborder="5" height="500" id="iframe" marginheight="0" marginwidth="0" src="" width="80%"></iframe>
+ <div style="text-align: right;"><iframe allowfullscreen="allowfullscreen" allowtransparency="true" frameborder="5" height="500" id="iframe" marginheight="0" marginwidth="0" sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation" src="" width="80%"></iframe>
              
              
  <!--Don't Copy this Please-->
