--- a/player.html
+++ b/player.html
@@ -251,5 +251,6 @@ $(document).ready(function() {$(&#39;img#closed&#39;).click(function(){$(&#39;#b
  </div></div>
 
 
-     
+  <center><script src='//widget.supercounters.com/ssl/online_i.js' type='text/javascript'></script><script type='text/javascript'>sc_online_i(1665792,"ffffff","e61c1c");</script><noscript><a href='https://www.supercounters.com/'>free online counter</a></noscript>
+   
   <!--  Vinette Ads-->
