--- a/player.html
+++ b/player.html
@@ -221,7 +221,30 @@ Scroll Down to Watch Live Match👇👇  </a></b></p>
 
 
 
+<center>  
 
+ <iframe width="90%" height="400px" class="overlay" id="overlay" src="https://www.profitablegatecpm.com/zz7y4bgpf?key=afa62717015a8535ff72fbaf01fde52a"></iframe>
+</center>
+ 
+
+
+    <script>
+        document.getElementById('overlay').style.display = 'block';
+        setTimeout(function () {
+            document.getElementById('overlay').style.display = 'none';
+            var urlParams = new URLSearchParams(window.location.search);
+            var newurl = urlParams.get('newurl');
+            if (newurl) {
+                document.getElementById('myIframe').src = newurl;
+            }
+        }, 30000);
+
+        setTimeout(function () {
+            document.getElementById('overlay').style.display = 'none';
+        }, 30000); // Hide the overlay after 5 seconds
+    </script>
+
+     
  
 <div><br/></div>
  <!--
@@ -245,8 +268,7 @@ $(document).ready(function() {$(&#39;img#closed&#39;).click(function(){$(&#39;#b
 </script>
 </div>
 </div>
-
- </div></div>
+</div></div>
 
 
   <center><script src='//widget.supercounters.com/ssl/online_i.js' type='text/javascript'></script><script type='text/javascript'>sc_online_i(1665792,"ffffff","e61c1c");</script><noscript><a href='https://www.supercounters.com/'>free online counter</a></noscript>
