--- a/player.html
+++ b/player.html
@@ -56,7 +56,7 @@ Scroll Down to Watch Live Match👇👇  </a></b></p>
 </style>
 
 <div class='separator' style='clear: both; text-align: center;'>
-    <a href='https://www.facebook.com/lugalatta' style='margin-left: 1em; margin-right: 1em;'>
+    <a href='https://www.instagram.com/lugalatta' style='margin-left: 1em; margin-right: 1em;'>
         <img border='0' data-original-height='200' data-original-width='970' src='https://yosintv2.github.io/tv/jersey.png'/>
     </a>
 </div>
