--- a/player.html
+++ b/player.html
@@ -79,7 +79,7 @@ Scroll Down to Watch Live Match👇👇  </a></b></p>
 
 
 
- <div><b>Cardano (ADA):</b> Cardano is a blockchain platform that aims to provide a more secure and scalable infrastructure for the development of decentralized applications and smart contracts. It is known for its focus on sustainability and interoperability.</div><div><br /></div>
+ <div>Cryptocurrencies have taken the world by storm, revolutionizing the way we think about money and financial transactions. With so many options available, it can be overwhelming to determine which ones are the best investments. Here, we'll take a closer look at the top 10 cryptocurrencies that you should know about.</div><div><br /></div>
   
   
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147"
